--- a/test/test_datasets.ipynb
+++ b/test/test_datasets.ipynb
@@ -2,25 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "# Add the project root directory to sys.path\n",
-    "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '../')))\n",
-    "\n",
-    "from pos.database import Database\n",
-    "import pandas as pd\n",
-    "from pprint import pprint\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -32,47 +14,190 @@
     }
    ],
    "source": [
-    "db = Database()"
+    "import sys\n",
+    "import os\n",
+    "# Add the project root directory to sys.path\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '../')))\n",
+    "\n",
+    "from pos.database import Database\n",
+    "import pandas as pd\n",
+    "from pprint import pprint\n",
+    "from collections import defaultdict\n",
+    "from datetime import datetime\n",
+    "\n",
+    "db = Database()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = db.fetch_all_sales()\n",
+    "\n",
+    "# Get daily sales\n",
+    "daily_sales = defaultdict(float)\n",
+    "for sale in data:\n",
+    "    date = sale[\"date\"].strftime('%Y-%m-%d')\n",
+    "    daily_sales[date] += float(sale[\"total_amount\"])\n",
+    "\n",
+    "daily_sale_data = [{\"date\": datetime.strptime(date, '%Y-%m-%d'), \"total_amount\": amount} for date, amount in daily_sales.items()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-23 01:27:35.044 Python[59111:953191] +[IMKClient subclass]: chose IMKClient_Modern\n",
-      "2024-11-23 01:27:35.719 Python[59111:953191] The class 'NSSavePanel' overrides the method identifier.  This method is implemented by class 'NSWindow'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error generating PDF: unsupported operand type(s) for /: 'decimal.Decimal' and 'float'\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'date': datetime.datetime(2024, 11, 23, 0, 0), 'total_amount': 40.0},\n",
+       " {'date': datetime.datetime(2018, 5, 11, 0, 0), 'total_amount': 357.98},\n",
+       " {'date': datetime.datetime(2014, 1, 12, 0, 0), 'total_amount': 811.02},\n",
+       " {'date': datetime.datetime(2016, 8, 4, 0, 0), 'total_amount': 429.74},\n",
+       " {'date': datetime.datetime(2019, 5, 8, 0, 0), 'total_amount': 762.98},\n",
+       " {'date': datetime.datetime(2019, 11, 9, 0, 0), 'total_amount': 755.22},\n",
+       " {'date': datetime.datetime(2014, 12, 11, 0, 0), 'total_amount': 117.46},\n",
+       " {'date': datetime.datetime(2021, 3, 9, 0, 0), 'total_amount': 142.08},\n",
+       " {'date': datetime.datetime(2014, 8, 12, 0, 0), 'total_amount': 814.26},\n",
+       " {'date': datetime.datetime(2017, 10, 9, 0, 0), 'total_amount': 949.9},\n",
+       " {'date': datetime.datetime(2017, 6, 2, 0, 0), 'total_amount': 638.18},\n",
+       " {'date': datetime.datetime(2020, 2, 8, 0, 0), 'total_amount': 313.16},\n",
+       " {'date': datetime.datetime(2022, 6, 4, 0, 0), 'total_amount': 714.2},\n",
+       " {'date': datetime.datetime(2015, 11, 4, 0, 0), 'total_amount': 237.34},\n",
+       " {'date': datetime.datetime(2022, 12, 5, 0, 0), 'total_amount': 289.88},\n",
+       " {'date': datetime.datetime(2013, 4, 12, 0, 0), 'total_amount': 995.38},\n",
+       " {'date': datetime.datetime(2017, 12, 12, 0, 0), 'total_amount': 182.28},\n",
+       " {'date': datetime.datetime(2013, 12, 1, 0, 0), 'total_amount': 922.72},\n",
+       " {'date': datetime.datetime(2019, 5, 11, 0, 0), 'total_amount': 754.58},\n",
+       " {'date': datetime.datetime(2014, 4, 10, 0, 0), 'total_amount': 182.84},\n",
+       " {'date': datetime.datetime(2014, 5, 7, 0, 0), 'total_amount': 346.54},\n",
+       " {'date': datetime.datetime(2014, 8, 11, 0, 0), 'total_amount': 826.36},\n",
+       " {'date': datetime.datetime(2022, 3, 4, 0, 0), 'total_amount': 271.74},\n",
+       " {'date': datetime.datetime(2021, 12, 9, 0, 0), 'total_amount': 601.56},\n",
+       " {'date': datetime.datetime(2013, 6, 10, 0, 0), 'total_amount': 292.62},\n",
+       " {'date': datetime.datetime(2019, 3, 6, 0, 0), 'total_amount': 894.94},\n",
+       " {'date': datetime.datetime(2018, 11, 8, 0, 0), 'total_amount': 341.18},\n",
+       " {'date': datetime.datetime(2018, 11, 11, 0, 0),\n",
+       "  'total_amount': 570.5999999999999},\n",
+       " {'date': datetime.datetime(2022, 4, 5, 0, 0), 'total_amount': 139.42},\n",
+       " {'date': datetime.datetime(2016, 11, 6, 0, 0), 'total_amount': 32.8},\n",
+       " {'date': datetime.datetime(2012, 8, 11, 0, 0), 'total_amount': 758.28},\n",
+       " {'date': datetime.datetime(2020, 12, 10, 0, 0), 'total_amount': 367.14},\n",
+       " {'date': datetime.datetime(2015, 3, 3, 0, 0),\n",
+       "  'total_amount': 103.94999999999999},\n",
+       " {'date': datetime.datetime(2022, 10, 12, 0, 0), 'total_amount': 466.36},\n",
+       " {'date': datetime.datetime(2014, 6, 9, 0, 0), 'total_amount': 377.68},\n",
+       " {'date': datetime.datetime(2015, 9, 2, 0, 0), 'total_amount': 735.5},\n",
+       " {'date': datetime.datetime(2018, 11, 5, 0, 0), 'total_amount': 178.99},\n",
+       " {'date': datetime.datetime(2016, 8, 19, 0, 0), 'total_amount': 360.14},\n",
+       " {'date': datetime.datetime(2013, 1, 13, 0, 0), 'total_amount': 192.96},\n",
+       " {'date': datetime.datetime(2018, 1, 23, 0, 0), 'total_amount': 451.39},\n",
+       " {'date': datetime.datetime(2017, 7, 28, 0, 0), 'total_amount': 299.01},\n",
+       " {'date': datetime.datetime(2013, 4, 21, 0, 0), 'total_amount': 40.32},\n",
+       " {'date': datetime.datetime(2014, 12, 1, 0, 0), 'total_amount': 405.51},\n",
+       " {'date': datetime.datetime(2016, 4, 8, 0, 0), 'total_amount': 214.87},\n",
+       " {'date': datetime.datetime(2019, 1, 25, 0, 0), 'total_amount': 315.42},\n",
+       " {'date': datetime.datetime(2019, 8, 5, 0, 0), 'total_amount': 381.49},\n",
+       " {'date': datetime.datetime(2014, 6, 23, 0, 0), 'total_amount': 461.75},\n",
+       " {'date': datetime.datetime(2019, 9, 11, 0, 0), 'total_amount': 377.61},\n",
+       " {'date': datetime.datetime(2017, 3, 13, 0, 0), 'total_amount': 357.12},\n",
+       " {'date': datetime.datetime(2023, 9, 29, 0, 0), 'total_amount': 494.09},\n",
+       " {'date': datetime.datetime(2014, 11, 12, 0, 0), 'total_amount': 58.73},\n",
+       " {'date': datetime.datetime(2019, 12, 15, 0, 0), 'total_amount': 305.11},\n",
+       " {'date': datetime.datetime(2018, 10, 29, 0, 0), 'total_amount': 262.89},\n",
+       " {'date': datetime.datetime(2021, 9, 3, 0, 0), 'total_amount': 71.04},\n",
+       " {'date': datetime.datetime(2017, 11, 15, 0, 0), 'total_amount': 108.51},\n",
+       " {'date': datetime.datetime(2021, 10, 25, 0, 0), 'total_amount': 323.87},\n",
+       " {'date': datetime.datetime(2017, 10, 27, 0, 0), 'total_amount': 19.41},\n",
+       " {'date': datetime.datetime(2014, 12, 8, 0, 0), 'total_amount': 407.13},\n",
+       " {'date': datetime.datetime(2022, 9, 25, 0, 0), 'total_amount': 89.04},\n",
+       " {'date': datetime.datetime(2014, 1, 30, 0, 0), 'total_amount': 72.27},\n",
+       " {'date': datetime.datetime(2019, 1, 26, 0, 0), 'total_amount': 486.52},\n",
+       " {'date': datetime.datetime(2020, 9, 27, 0, 0), 'total_amount': 488.43},\n",
+       " {'date': datetime.datetime(2017, 9, 10, 0, 0), 'total_amount': 474.95},\n",
+       " {'date': datetime.datetime(2020, 6, 21, 0, 0), 'total_amount': 420.86},\n",
+       " {'date': datetime.datetime(2017, 2, 6, 0, 0), 'total_amount': 319.09},\n",
+       " {'date': datetime.datetime(2020, 8, 2, 0, 0), 'total_amount': 156.58},\n",
+       " {'date': datetime.datetime(2022, 4, 6, 0, 0), 'total_amount': 357.1},\n",
+       " {'date': datetime.datetime(2014, 2, 28, 0, 0), 'total_amount': 153.12},\n",
+       " {'date': datetime.datetime(2021, 7, 22, 0, 0), 'total_amount': 29.54},\n",
+       " {'date': datetime.datetime(2019, 8, 23, 0, 0), 'total_amount': 178.79},\n",
+       " {'date': datetime.datetime(2015, 5, 15, 0, 0), 'total_amount': 65.93},\n",
+       " {'date': datetime.datetime(2015, 4, 11, 0, 0), 'total_amount': 118.67},\n",
+       " {'date': datetime.datetime(2013, 2, 26, 0, 0), 'total_amount': 300.69},\n",
+       " {'date': datetime.datetime(2022, 5, 12, 0, 0), 'total_amount': 144.94},\n",
+       " {'date': datetime.datetime(2017, 7, 29, 0, 0), 'total_amount': 34.88},\n",
+       " {'date': datetime.datetime(2016, 1, 22, 0, 0), 'total_amount': 134.15},\n",
+       " {'date': datetime.datetime(2013, 12, 4, 0, 0), 'total_amount': 497.69},\n",
+       " {'date': datetime.datetime(2017, 7, 23, 0, 0), 'total_amount': 125.56},\n",
+       " {'date': datetime.datetime(2017, 5, 29, 0, 0), 'total_amount': 168.12},\n",
+       " {'date': datetime.datetime(2022, 12, 30, 0, 0), 'total_amount': 11.72},\n",
+       " {'date': datetime.datetime(2013, 1, 12, 0, 0), 'total_amount': 461.36},\n",
+       " {'date': datetime.datetime(2014, 8, 22, 0, 0), 'total_amount': 257.86},\n",
+       " {'date': datetime.datetime(2019, 11, 5, 0, 0), 'total_amount': 377.29},\n",
+       " {'date': datetime.datetime(2019, 12, 28, 0, 0), 'total_amount': 171.78},\n",
+       " {'date': datetime.datetime(2012, 11, 14, 0, 0), 'total_amount': 123.3},\n",
+       " {'date': datetime.datetime(2018, 8, 21, 0, 0), 'total_amount': 335.63},\n",
+       " {'date': datetime.datetime(2022, 3, 29, 0, 0), 'total_amount': 226.85},\n",
+       " {'date': datetime.datetime(2014, 10, 4, 0, 0), 'total_amount': 91.42},\n",
+       " {'date': datetime.datetime(2017, 6, 28, 0, 0), 'total_amount': 98.79},\n",
+       " {'date': datetime.datetime(2016, 11, 17, 0, 0), 'total_amount': 399.08},\n",
+       " {'date': datetime.datetime(2014, 7, 5, 0, 0), 'total_amount': 173.27},\n",
+       " {'date': datetime.datetime(2018, 10, 22, 0, 0), 'total_amount': 369.18},\n",
+       " {'date': datetime.datetime(2014, 11, 8, 0, 0), 'total_amount': 413.18},\n",
+       " {'date': datetime.datetime(2022, 4, 3, 0, 0), 'total_amount': 135.87},\n",
+       " {'date': datetime.datetime(2021, 9, 12, 0, 0), 'total_amount': 300.78},\n",
+       " {'date': datetime.datetime(2014, 7, 31, 0, 0), 'total_amount': 483.5},\n",
+       " {'date': datetime.datetime(2013, 10, 6, 0, 0), 'total_amount': 146.31},\n",
+       " {'date': datetime.datetime(2020, 8, 14, 0, 0), 'total_amount': 295.72},\n",
+       " {'date': datetime.datetime(2019, 6, 3, 0, 0), 'total_amount': 447.47},\n",
+       " {'date': datetime.datetime(2016, 8, 20, 0, 0), 'total_amount': 174.79},\n",
+       " {'date': datetime.datetime(2018, 3, 22, 0, 0), 'total_amount': 245.57},\n",
+       " {'date': datetime.datetime(2018, 8, 11, 0, 0), 'total_amount': 170.59},\n",
+       " {'date': datetime.datetime(2021, 6, 14, 0, 0), 'total_amount': 494.48},\n",
+       " {'date': datetime.datetime(2020, 12, 13, 0, 0), 'total_amount': 185.89},\n",
+       " {'date': datetime.datetime(2019, 6, 29, 0, 0), 'total_amount': 106.05},\n",
+       " {'date': datetime.datetime(2021, 11, 20, 0, 0), 'total_amount': 256.3},\n",
+       " {'date': datetime.datetime(2019, 9, 29, 0, 0), 'total_amount': 255.08},\n",
+       " {'date': datetime.datetime(2015, 8, 27, 0, 0), 'total_amount': 397.67},\n",
+       " {'date': datetime.datetime(2022, 5, 4, 0, 0), 'total_amount': 69.71},\n",
+       " {'date': datetime.datetime(2016, 6, 11, 0, 0), 'total_amount': 16.4},\n",
+       " {'date': datetime.datetime(2016, 2, 18, 0, 0), 'total_amount': 263.51},\n",
+       " {'date': datetime.datetime(2019, 8, 27, 0, 0), 'total_amount': 255.99},\n",
+       " {'date': datetime.datetime(2021, 8, 28, 0, 0), 'total_amount': 171.72},\n",
+       " {'date': datetime.datetime(2012, 11, 8, 0, 0), 'total_amount': 379.14},\n",
+       " {'date': datetime.datetime(2020, 10, 12, 0, 0), 'total_amount': 183.57},\n",
+       " {'date': datetime.datetime(2019, 8, 13, 0, 0), 'total_amount': 39.79},\n",
+       " {'date': datetime.datetime(2015, 12, 19, 0, 0), 'total_amount': 412.88},\n",
+       " {'date': datetime.datetime(2014, 4, 22, 0, 0), 'total_amount': 279.57},\n",
+       " {'date': datetime.datetime(2017, 2, 25, 0, 0), 'total_amount': 319.88},\n",
+       " {'date': datetime.datetime(2022, 7, 27, 0, 0), 'total_amount': 380.86},\n",
+       " {'date': datetime.datetime(2014, 9, 22, 0, 0), 'total_amount': 17.5},\n",
+       " {'date': datetime.datetime(2014, 7, 17, 0, 0), 'total_amount': 170.75},\n",
+       " {'date': datetime.datetime(2015, 3, 28, 0, 0), 'total_amount': 273.7},\n",
+       " {'date': datetime.datetime(2022, 12, 10, 0, 0), 'total_amount': 233.18},\n",
+       " {'date': datetime.datetime(2018, 5, 29, 0, 0), 'total_amount': 54.74},\n",
+       " {'date': datetime.datetime(2015, 4, 23, 0, 0), 'total_amount': 54.76},\n",
+       " {'date': datetime.datetime(2014, 9, 6, 0, 0), 'total_amount': 188.84},\n",
+       " {'date': datetime.datetime(2017, 2, 19, 0, 0), 'total_amount': 127.0},\n",
+       " {'date': datetime.datetime(2014, 12, 28, 0, 0), 'total_amount': 219.95},\n",
+       " {'date': datetime.datetime(2015, 2, 9, 0, 0), 'total_amount': 367.75},\n",
+       " {'date': datetime.datetime(2012, 11, 24, 0, 0), 'total_amount': 188.72},\n",
+       " {'date': datetime.datetime(2021, 6, 29, 0, 0), 'total_amount': 65.82},\n",
+       " {'date': datetime.datetime(2016, 2, 27, 0, 0), 'total_amount': 407.36}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.generate_sales_report_as_pdf()"
+    "daily_sale_data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
