--- a/test/test_datasets.ipynb
+++ b/test/test_datasets.ipynb
@@ -47,156 +47,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'date': datetime.datetime(2024, 11, 23, 0, 0), 'total_amount': 40.0},\n",
-       " {'date': datetime.datetime(2018, 5, 11, 0, 0), 'total_amount': 357.98},\n",
-       " {'date': datetime.datetime(2014, 1, 12, 0, 0), 'total_amount': 811.02},\n",
-       " {'date': datetime.datetime(2016, 8, 4, 0, 0), 'total_amount': 429.74},\n",
-       " {'date': datetime.datetime(2019, 5, 8, 0, 0), 'total_amount': 762.98},\n",
-       " {'date': datetime.datetime(2019, 11, 9, 0, 0), 'total_amount': 755.22},\n",
-       " {'date': datetime.datetime(2014, 12, 11, 0, 0), 'total_amount': 117.46},\n",
-       " {'date': datetime.datetime(2021, 3, 9, 0, 0), 'total_amount': 142.08},\n",
-       " {'date': datetime.datetime(2014, 8, 12, 0, 0), 'total_amount': 814.26},\n",
-       " {'date': datetime.datetime(2017, 10, 9, 0, 0), 'total_amount': 949.9},\n",
-       " {'date': datetime.datetime(2017, 6, 2, 0, 0), 'total_amount': 638.18},\n",
-       " {'date': datetime.datetime(2020, 2, 8, 0, 0), 'total_amount': 313.16},\n",
-       " {'date': datetime.datetime(2022, 6, 4, 0, 0), 'total_amount': 714.2},\n",
-       " {'date': datetime.datetime(2015, 11, 4, 0, 0), 'total_amount': 237.34},\n",
-       " {'date': datetime.datetime(2022, 12, 5, 0, 0), 'total_amount': 289.88},\n",
-       " {'date': datetime.datetime(2013, 4, 12, 0, 0), 'total_amount': 995.38},\n",
-       " {'date': datetime.datetime(2017, 12, 12, 0, 0), 'total_amount': 182.28},\n",
-       " {'date': datetime.datetime(2013, 12, 1, 0, 0), 'total_amount': 922.72},\n",
-       " {'date': datetime.datetime(2019, 5, 11, 0, 0), 'total_amount': 754.58},\n",
-       " {'date': datetime.datetime(2014, 4, 10, 0, 0), 'total_amount': 182.84},\n",
-       " {'date': datetime.datetime(2014, 5, 7, 0, 0), 'total_amount': 346.54},\n",
-       " {'date': datetime.datetime(2014, 8, 11, 0, 0), 'total_amount': 826.36},\n",
-       " {'date': datetime.datetime(2022, 3, 4, 0, 0), 'total_amount': 271.74},\n",
-       " {'date': datetime.datetime(2021, 12, 9, 0, 0), 'total_amount': 601.56},\n",
-       " {'date': datetime.datetime(2013, 6, 10, 0, 0), 'total_amount': 292.62},\n",
-       " {'date': datetime.datetime(2019, 3, 6, 0, 0), 'total_amount': 894.94},\n",
-       " {'date': datetime.datetime(2018, 11, 8, 0, 0), 'total_amount': 341.18},\n",
-       " {'date': datetime.datetime(2018, 11, 11, 0, 0),\n",
-       "  'total_amount': 570.5999999999999},\n",
-       " {'date': datetime.datetime(2022, 4, 5, 0, 0), 'total_amount': 139.42},\n",
-       " {'date': datetime.datetime(2016, 11, 6, 0, 0), 'total_amount': 32.8},\n",
-       " {'date': datetime.datetime(2012, 8, 11, 0, 0), 'total_amount': 758.28},\n",
-       " {'date': datetime.datetime(2020, 12, 10, 0, 0), 'total_amount': 367.14},\n",
-       " {'date': datetime.datetime(2015, 3, 3, 0, 0),\n",
-       "  'total_amount': 103.94999999999999},\n",
-       " {'date': datetime.datetime(2022, 10, 12, 0, 0), 'total_amount': 466.36},\n",
-       " {'date': datetime.datetime(2014, 6, 9, 0, 0), 'total_amount': 377.68},\n",
-       " {'date': datetime.datetime(2015, 9, 2, 0, 0), 'total_amount': 735.5},\n",
-       " {'date': datetime.datetime(2018, 11, 5, 0, 0), 'total_amount': 178.99},\n",
-       " {'date': datetime.datetime(2016, 8, 19, 0, 0), 'total_amount': 360.14},\n",
-       " {'date': datetime.datetime(2013, 1, 13, 0, 0), 'total_amount': 192.96},\n",
-       " {'date': datetime.datetime(2018, 1, 23, 0, 0), 'total_amount': 451.39},\n",
-       " {'date': datetime.datetime(2017, 7, 28, 0, 0), 'total_amount': 299.01},\n",
-       " {'date': datetime.datetime(2013, 4, 21, 0, 0), 'total_amount': 40.32},\n",
-       " {'date': datetime.datetime(2014, 12, 1, 0, 0), 'total_amount': 405.51},\n",
-       " {'date': datetime.datetime(2016, 4, 8, 0, 0), 'total_amount': 214.87},\n",
-       " {'date': datetime.datetime(2019, 1, 25, 0, 0), 'total_amount': 315.42},\n",
-       " {'date': datetime.datetime(2019, 8, 5, 0, 0), 'total_amount': 381.49},\n",
-       " {'date': datetime.datetime(2014, 6, 23, 0, 0), 'total_amount': 461.75},\n",
-       " {'date': datetime.datetime(2019, 9, 11, 0, 0), 'total_amount': 377.61},\n",
-       " {'date': datetime.datetime(2017, 3, 13, 0, 0), 'total_amount': 357.12},\n",
-       " {'date': datetime.datetime(2023, 9, 29, 0, 0), 'total_amount': 494.09},\n",
-       " {'date': datetime.datetime(2014, 11, 12, 0, 0), 'total_amount': 58.73},\n",
-       " {'date': datetime.datetime(2019, 12, 15, 0, 0), 'total_amount': 305.11},\n",
-       " {'date': datetime.datetime(2018, 10, 29, 0, 0), 'total_amount': 262.89},\n",
-       " {'date': datetime.datetime(2021, 9, 3, 0, 0), 'total_amount': 71.04},\n",
-       " {'date': datetime.datetime(2017, 11, 15, 0, 0), 'total_amount': 108.51},\n",
-       " {'date': datetime.datetime(2021, 10, 25, 0, 0), 'total_amount': 323.87},\n",
-       " {'date': datetime.datetime(2017, 10, 27, 0, 0), 'total_amount': 19.41},\n",
-       " {'date': datetime.datetime(2014, 12, 8, 0, 0), 'total_amount': 407.13},\n",
-       " {'date': datetime.datetime(2022, 9, 25, 0, 0), 'total_amount': 89.04},\n",
-       " {'date': datetime.datetime(2014, 1, 30, 0, 0), 'total_amount': 72.27},\n",
-       " {'date': datetime.datetime(2019, 1, 26, 0, 0), 'total_amount': 486.52},\n",
-       " {'date': datetime.datetime(2020, 9, 27, 0, 0), 'total_amount': 488.43},\n",
-       " {'date': datetime.datetime(2017, 9, 10, 0, 0), 'total_amount': 474.95},\n",
-       " {'date': datetime.datetime(2020, 6, 21, 0, 0), 'total_amount': 420.86},\n",
-       " {'date': datetime.datetime(2017, 2, 6, 0, 0), 'total_amount': 319.09},\n",
-       " {'date': datetime.datetime(2020, 8, 2, 0, 0), 'total_amount': 156.58},\n",
-       " {'date': datetime.datetime(2022, 4, 6, 0, 0), 'total_amount': 357.1},\n",
-       " {'date': datetime.datetime(2014, 2, 28, 0, 0), 'total_amount': 153.12},\n",
-       " {'date': datetime.datetime(2021, 7, 22, 0, 0), 'total_amount': 29.54},\n",
-       " {'date': datetime.datetime(2019, 8, 23, 0, 0), 'total_amount': 178.79},\n",
-       " {'date': datetime.datetime(2015, 5, 15, 0, 0), 'total_amount': 65.93},\n",
-       " {'date': datetime.datetime(2015, 4, 11, 0, 0), 'total_amount': 118.67},\n",
-       " {'date': datetime.datetime(2013, 2, 26, 0, 0), 'total_amount': 300.69},\n",
-       " {'date': datetime.datetime(2022, 5, 12, 0, 0), 'total_amount': 144.94},\n",
-       " {'date': datetime.datetime(2017, 7, 29, 0, 0), 'total_amount': 34.88},\n",
-       " {'date': datetime.datetime(2016, 1, 22, 0, 0), 'total_amount': 134.15},\n",
-       " {'date': datetime.datetime(2013, 12, 4, 0, 0), 'total_amount': 497.69},\n",
-       " {'date': datetime.datetime(2017, 7, 23, 0, 0), 'total_amount': 125.56},\n",
-       " {'date': datetime.datetime(2017, 5, 29, 0, 0), 'total_amount': 168.12},\n",
-       " {'date': datetime.datetime(2022, 12, 30, 0, 0), 'total_amount': 11.72},\n",
-       " {'date': datetime.datetime(2013, 1, 12, 0, 0), 'total_amount': 461.36},\n",
-       " {'date': datetime.datetime(2014, 8, 22, 0, 0), 'total_amount': 257.86},\n",
-       " {'date': datetime.datetime(2019, 11, 5, 0, 0), 'total_amount': 377.29},\n",
-       " {'date': datetime.datetime(2019, 12, 28, 0, 0), 'total_amount': 171.78},\n",
-       " {'date': datetime.datetime(2012, 11, 14, 0, 0), 'total_amount': 123.3},\n",
-       " {'date': datetime.datetime(2018, 8, 21, 0, 0), 'total_amount': 335.63},\n",
-       " {'date': datetime.datetime(2022, 3, 29, 0, 0), 'total_amount': 226.85},\n",
-       " {'date': datetime.datetime(2014, 10, 4, 0, 0), 'total_amount': 91.42},\n",
-       " {'date': datetime.datetime(2017, 6, 28, 0, 0), 'total_amount': 98.79},\n",
-       " {'date': datetime.datetime(2016, 11, 17, 0, 0), 'total_amount': 399.08},\n",
-       " {'date': datetime.datetime(2014, 7, 5, 0, 0), 'total_amount': 173.27},\n",
-       " {'date': datetime.datetime(2018, 10, 22, 0, 0), 'total_amount': 369.18},\n",
-       " {'date': datetime.datetime(2014, 11, 8, 0, 0), 'total_amount': 413.18},\n",
-       " {'date': datetime.datetime(2022, 4, 3, 0, 0), 'total_amount': 135.87},\n",
-       " {'date': datetime.datetime(2021, 9, 12, 0, 0), 'total_amount': 300.78},\n",
-       " {'date': datetime.datetime(2014, 7, 31, 0, 0), 'total_amount': 483.5},\n",
-       " {'date': datetime.datetime(2013, 10, 6, 0, 0), 'total_amount': 146.31},\n",
-       " {'date': datetime.datetime(2020, 8, 14, 0, 0), 'total_amount': 295.72},\n",
-       " {'date': datetime.datetime(2019, 6, 3, 0, 0), 'total_amount': 447.47},\n",
-       " {'date': datetime.datetime(2016, 8, 20, 0, 0), 'total_amount': 174.79},\n",
-       " {'date': datetime.datetime(2018, 3, 22, 0, 0), 'total_amount': 245.57},\n",
-       " {'date': datetime.datetime(2018, 8, 11, 0, 0), 'total_amount': 170.59},\n",
-       " {'date': datetime.datetime(2021, 6, 14, 0, 0), 'total_amount': 494.48},\n",
-       " {'date': datetime.datetime(2020, 12, 13, 0, 0), 'total_amount': 185.89},\n",
-       " {'date': datetime.datetime(2019, 6, 29, 0, 0), 'total_amount': 106.05},\n",
-       " {'date': datetime.datetime(2021, 11, 20, 0, 0), 'total_amount': 256.3},\n",
-       " {'date': datetime.datetime(2019, 9, 29, 0, 0), 'total_amount': 255.08},\n",
-       " {'date': datetime.datetime(2015, 8, 27, 0, 0), 'total_amount': 397.67},\n",
-       " {'date': datetime.datetime(2022, 5, 4, 0, 0), 'total_amount': 69.71},\n",
-       " {'date': datetime.datetime(2016, 6, 11, 0, 0), 'total_amount': 16.4},\n",
-       " {'date': datetime.datetime(2016, 2, 18, 0, 0), 'total_amount': 263.51},\n",
-       " {'date': datetime.datetime(2019, 8, 27, 0, 0), 'total_amount': 255.99},\n",
-       " {'date': datetime.datetime(2021, 8, 28, 0, 0), 'total_amount': 171.72},\n",
-       " {'date': datetime.datetime(2012, 11, 8, 0, 0), 'total_amount': 379.14},\n",
-       " {'date': datetime.datetime(2020, 10, 12, 0, 0), 'total_amount': 183.57},\n",
-       " {'date': datetime.datetime(2019, 8, 13, 0, 0), 'total_amount': 39.79},\n",
-       " {'date': datetime.datetime(2015, 12, 19, 0, 0), 'total_amount': 412.88},\n",
-       " {'date': datetime.datetime(2014, 4, 22, 0, 0), 'total_amount': 279.57},\n",
-       " {'date': datetime.datetime(2017, 2, 25, 0, 0), 'total_amount': 319.88},\n",
-       " {'date': datetime.datetime(2022, 7, 27, 0, 0), 'total_amount': 380.86},\n",
-       " {'date': datetime.datetime(2014, 9, 22, 0, 0), 'total_amount': 17.5},\n",
-       " {'date': datetime.datetime(2014, 7, 17, 0, 0), 'total_amount': 170.75},\n",
-       " {'date': datetime.datetime(2015, 3, 28, 0, 0), 'total_amount': 273.7},\n",
-       " {'date': datetime.datetime(2022, 12, 10, 0, 0), 'total_amount': 233.18},\n",
-       " {'date': datetime.datetime(2018, 5, 29, 0, 0), 'total_amount': 54.74},\n",
-       " {'date': datetime.datetime(2015, 4, 23, 0, 0), 'total_amount': 54.76},\n",
-       " {'date': datetime.datetime(2014, 9, 6, 0, 0), 'total_amount': 188.84},\n",
-       " {'date': datetime.datetime(2017, 2, 19, 0, 0), 'total_amount': 127.0},\n",
-       " {'date': datetime.datetime(2014, 12, 28, 0, 0), 'total_amount': 219.95},\n",
-       " {'date': datetime.datetime(2015, 2, 9, 0, 0), 'total_amount': 367.75},\n",
-       " {'date': datetime.datetime(2012, 11, 24, 0, 0), 'total_amount': 188.72},\n",
-       " {'date': datetime.datetime(2021, 6, 29, 0, 0), 'total_amount': 65.82},\n",
-       " {'date': datetime.datetime(2016, 2, 27, 0, 0), 'total_amount': 407.36}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invoice generated: /Users/home/Desktop/pos_system/test/invoice.pdf\n"
+     ]
     }
    ],
    "source": [
-    "daily_sale_data"
+    "from reportlab.platypus import SimpleDocTemplate, Paragraph, Spacer, Table, TableStyle\n",
+    "from reportlab.lib.pagesizes import landscape\n",
+    "from reportlab.lib.styles import getSampleStyleSheet\n",
+    "from reportlab.lib import colors\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "class InvoiceGenerator:\n",
+    "    def __init__(self, invoice_id, sale_data, sale_items):\n",
+    "        self.invoice_id = invoice_id\n",
+    "        self.sale_data = sale_data\n",
+    "        self.sale_items = sale_items\n",
+    "\n",
+    "    def generate_invoice(self, filename=\"invoice.pdf\"):\n",
+    "        # Page size for a small thermal paper\n",
+    "        page_width, page_height = (58, 100)  # Thermal printer paper size in points\n",
+    "        doc = SimpleDocTemplate(\n",
+    "            filename,\n",
+    "            pagesize=(page_width, page_height),\n",
+    "            rightMargin=2,\n",
+    "            leftMargin=2,\n",
+    "            topMargin=2,\n",
+    "            bottomMargin=2,\n",
+    "        )\n",
+    "        elements = []\n",
+    "\n",
+    "        # Styles for the document\n",
+    "        styles = getSampleStyleSheet()\n",
+    "        title_style = styles['Title']\n",
+    "        normal_style = styles['Normal']\n",
+    "\n",
+    "        # Adjust font sizes for small paper\n",
+    "        title_style.fontSize = 6\n",
+    "        normal_style.fontSize = 4\n",
+    "\n",
+    "        # Add header\n",
+    "        elements.append(Paragraph(\"TOKATA - Invoice\", title_style))\n",
+    "        elements.append(Spacer(1, 4))\n",
+    "        elements.append(Paragraph(f\"Invoice Number: {self.invoice_id}\", normal_style))\n",
+    "        elements.append(Paragraph(f\"Date: {self.sale_data['date']}\", normal_style))\n",
+    "        elements.append(Spacer(1, 4))\n",
+    "\n",
+    "        # Add table for items\n",
+    "        table_data = [[\"Item\", \"Qty\", \"Price\", \"Total\"]]\n",
+    "        total = 0\n",
+    "        for item in self.sale_items:\n",
+    "            item_total = item['quantity'] * item['unit_price']\n",
+    "            table_data.append([\n",
+    "                Paragraph(item['name'], normal_style),  # Use Paragraph for wrapping long text\n",
+    "                item['quantity'],\n",
+    "                f\"${item['unit_price']:.2f}\",\n",
+    "                f\"${item_total:.2f}\",\n",
+    "            ])\n",
+    "            total += item_total\n",
+    "\n",
+    "        # Add totals row\n",
+    "        table_data.append([\"\", \"\", \"Total\", f\"${total:.2f}\"])\n",
+    "\n",
+    "        # Create table\n",
+    "        table = Table(\n",
+    "            table_data,\n",
+    "            colWidths=[20, 8, 15, 15],  # Adjust column widths for better fit\n",
+    "            hAlign='LEFT',\n",
+    "        )\n",
+    "        table.setStyle(TableStyle([\n",
+    "            ('BACKGROUND', (0, 0), (-1, 0), colors.grey),\n",
+    "            ('TEXTCOLOR', (0, 0), (-1, 0), colors.white),\n",
+    "            ('ALIGN', (0, 0), (-1, -1), 'CENTER'),\n",
+    "            ('FONTNAME', (0, 0), (-1, -1), 'Helvetica'),\n",
+    "            ('FONTSIZE', (0, 0), (-1, -1), 3.5),  # Smaller font size for table\n",
+    "            ('BOTTOMPADDING', (0, 0), (-1, -1), 1),\n",
+    "            ('GRID', (0, 0), (-1, -1), 0.1, colors.black),\n",
+    "        ]))\n",
+    "        elements.append(table)\n",
+    "        elements.append(Spacer(1, 6))\n",
+    "\n",
+    "        # Add footer\n",
+    "        elements.append(Paragraph(\"Thank you for your purchase!\", normal_style))\n",
+    "        elements.append(Spacer(1, 2))\n",
+    "        elements.append(Paragraph(\"© TOKATA. All rights reserved.\", normal_style))\n",
+    "\n",
+    "        # Build PDF\n",
+    "        doc.build(elements)\n",
+    "        print(f\"Invoice generated: {os.path.abspath(filename)}\")\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Dummy data\n",
+    "    invoice_id = \"INV-001\"\n",
+    "    sale_data = {\n",
+    "        \"date\": \"2024-11-24\",\n",
+    "    }\n",
+    "    sale_items = [\n",
+    "        {\"name\": \"Item A\", \"quantity\": 2, \"unit_price\": 5.50},\n",
+    "        {\"name\": \"Item B\", \"quantity\": 1, \"unit_price\": 12.00},\n",
+    "        {\"name\": \"Item C\", \"quantity\": 3, \"unit_price\": 3.75},\n",
+    "    ]\n",
+    "\n",
+    "    # Generate invoice\n",
+    "    generator = InvoiceGenerator(invoice_id, sale_data, sale_items)\n",
+    "    generator.generate_invoice(\"invoice.pdf\")\n"
    ]
   }
  ],
